:tada: Refactor frontend to use Radix UI and add i18n support
