# internal/api/hakoniwa/oas_response_encoders_gen.go
@@ -37,6 +37,20 @@ func encodeGetAuthMeResponse(response GetAuthMeRes, w http.ResponseWriter, span 
 	}
 }
 
+func encodeGetConfigurationResponse(response *Configuration, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeLoginAnonymousResponse(response *AuthStatus, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
